--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "earnapp-api",
-  "version": "1.0.0",
-  "description": "API for EarnApp Firebase application",
-  "main": "index.js",
+  "name": "earnapp-functions",
+  "description": "Cloud Functions for EarnApp",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
+    "start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
   },
+  "engines": {
+    "node": "18"
+  },
+  "main": "index.js",
   "dependencies": {
-    "express": "^4.18.2",
-    "firebase-admin": "^11.5.0",
-    "cors": "^2.8.5"
+    "firebase-admin": "^11.8.0",
+    "firebase-functions": "^4.3.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
-  }
+    "firebase-functions-test": "^3.1.0"
+  },
+  "private": true
 }
