--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "earnapp-functions",
-  "description": "Cloud Functions for EarnApp",
+  "name": "earnapp-api",
+  "version": "1.0.0",
+  "description": "EarnApp API running on Vercel",
+  "main": "index.js",
   "scripts": {
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "start": "node index.js"
   },
   "engines": {
     "node": "22.x"
   },
-  "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
-  },
-  "devDependencies": {
-    "firebase-functions-test": "^3.1.0"
-  },
-  "private": true
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "firebase-admin": "^12.0.0"
+  }
 }
