--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "earnapp-api",
-  "version": "1.0.0",
-  "description": "EarnApp API running on Vercel",
-  "main": "index.js",
+  "name": "functions",
   "scripts": {
-    "start": "node index.js"
+    "serve": "firebase emulators:start",
+    "start": "firebase emulators:start",
+    "deploy": "firebase deploy --only functions",
+    "lint": "eslint ."
   },
   "engines": {
     "node": "22.x"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "firebase-admin": "^12.0.0"
+    "firebase-admin": "^13.0.0",
+    "firebase-functions": "^6.0.0"
   }
 }
